--- a/src/app/orders-page/orders.component.html
+++ b/src/app/orders-page/orders.component.html
@@ -2,6 +2,6 @@
                 [mainColumn]="mainColumn"
                 (onUpdateData)="updateData()"
                 (onLazyLoad)="twoDownload()"
-                [buttonActionDisable]="false"
+                [contextMenuActionDisable]="false"
                 [buttonItems]="[]"
                 [stateFilterDisable]="false"  *ngIf="data!=null"></app-table-page>
