--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,7 @@
 <!--                class=" p-button-danger"-->
 <!--                style="min-width: 8rem"-->
 <!--                [label]="'page.cancel' | translate" icon="pi pi-times"></button>-->
-<!--        <div class="login-row">-->
+        <div class="login-row">
 
 
             <button pRipple pButton type="button" (click)="cancel()"
