--- a/src/app/widgets/filters/work-filter/work-filter.component.html
+++ b/src/app/widgets/filters/work-filter/work-filter.component.html
@@ -5,6 +5,7 @@
                         field="name"
                         placeholder="выберете работу"
                         (onClear)="clear()"
+                        [type]="'search'"
                         [dropdown]="true">
             <ng-template let-country pTemplate="item">
                 <div class="country-item">
