--- a/src/app/widgets/filters/work-period-filter/work-period-filter.component.html
+++ b/src/app/widgets/filters/work-period-filter/work-period-filter.component.html
@@ -4,7 +4,7 @@
         <p-dropdown (onChange)="changePeriod()"
                     placeholder="период"
                     [options]="periods" [(ngModel)]="period"
-                    optionLabel="name"  [showClear]="true">
+                    optionLabel="name"  >
         </p-dropdown>
     </div>
 </div>
