--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,4 +1,5 @@
-<p-menubar id="openNav" [model]="(apiService.getUserData()!==null && apiService.getUserData()!==undefined)?items:itemsNoLogin"
+<p-menubar id="openNav"
+           [model]="(apiService.getUserData()!==null && apiService.getUserData()!==undefined)?items:itemsNoLogin"
            [style]="{zIndex:'999',background:'#f4f4f4',
 minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'} "
 >
@@ -36,9 +37,12 @@ minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'} "
             id="mySidebarList"
             (onClick)="onItemMenu($event)"
             [style]="{minWidth:'100%',borderColor:'white',zIndex:'2',width:'100%',
-            position:'absolute',left:'0px',fontSize:'1.5em'}"
-            [options]=" options" [(ngModel)]="cities1"
-            optionLabel="name"></p-listbox>
+            position:'absolute',left:'0px',fontSize:'1.1em'}"
+            [options]=" apiService.adminMode?optionsAdmin:optionsUser" [(ngModel)]="cities1"
+            optionLabel="name">
+
+
+    </p-listbox>
 </div>
 
 <br/>
