--- a/src/app/master-select-window/master-select-window.component.html
+++ b/src/app/master-select-window/master-select-window.component.html
@@ -1,7 +1,7 @@
 <div style="background: #F56C6C">
     <p>ЗНАХОДИТЬСЯ В РОЗРОБЦІ</p>
 </div>
-<app-table-page [startData]="data" title="вибір замовлення"
+<app-table-page [startData]="data" title="работы"
                 [mainColumn]="mainColumn" [stateFilterDisable]="true"
                 (onUpdateData)="onUpdate()"
                 (contextMenuActionUpdateData)="updateData()"
