--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -77,7 +77,7 @@
                         <div class="p-mb-4 p-mr-4" style="width: 20%">
                             <h3> {{ title }}</h3>
                         </div>
-                        <div class="p-mb-6 p-mr-6" style="width: 40%">
+                        <div class="p-mb-6 p-mr-6" style="width: 20%">
                         </div>
                         <div *ngIf="!standardFilterDisable && !hideButtonBar" class="p-mb-2 p-mr-2" style=" position: relative;top:-2px">
                             <button pButton type="button" (click)="showDialog()"
@@ -98,6 +98,12 @@
                             <app-detail-filter (onSuggest)="updateData()"
                                                (click)="confirmOnFilter($event)"
                             ></app-detail-filter>
+                        </div>
+                        <div *ngIf="standardFilterDisable && !hideButtonBar" class="p-mb-2 p-mr-2"
+                             style="width: 300px; position: relative;top:-10px">
+                            <app-work-item-filter-page (onSuggest)="updateData()"
+                                               (click)="confirmOnFilter($event)"
+                            ></app-work-item-filter-page>
                         </div>
                         <div *ngIf="standardFilterDisable && !hideButtonBar" class="p-mb-2 p-mr-2"
                              style="width: 300px; position: relative;top:-10px">
@@ -236,7 +242,7 @@
             </ng-template>
             <ng-template pTemplate="emptymessage">
                 <tr>
-                    <td [colSpan]="_selectedColumns.length">No customers found.</td>
+                    <td [colSpan]="_selectedColumns.length">No records found</td>
                 </tr>
             </ng-template>
         </p-table>
