--- a/src/app/master-select-window/master-select-window.component.html
+++ b/src/app/master-select-window/master-select-window.component.html
@@ -4,6 +4,7 @@
 <app-table-page [startData]="data" title="работы"
                 [mainColumn]="mainColumn" [stateFilterDisable]="true"
                 (onUpdateData)="onUpdate()"
+                [confirmDisplay]="false"
                 (contextMenuActionUpdateData)="updateData()"
                 [masterWindowsSelectDisable]="false"
                 [buttonItems]="buttItem" [standardFilterDisable]="true"
