--- a/src/app/work-master-page/work-master-page.component.html
+++ b/src/app/work-master-page/work-master-page.component.html
@@ -5,6 +5,7 @@
                 [mainColumn]="mainColumn" [stateFilterDisable]="true"
                 (onUpdateData)="onUpdate()"
                 [hideButtonBar]="true"
+                [confirmDisplay]="false"
                 (contextMenuActionUpdateData)="updateData()"
                 [masterWindowsSelectDisable]="true"
                 [buttonItems]="buttItem" [standardFilterDisable]="true"
