--- a/src/app/work-master-page/work-master-page.component.html
+++ b/src/app/work-master-page/work-master-page.component.html
@@ -1,6 +1,6 @@
-<div style="background: #F56C6C">
-    <p>ЗНАХОДИТЬСЯ В РОЗРОБЦІ</p>
-</div>
+<!--<div style="background: #F56C6C">-->
+<!--    <p>ЗНАХОДИТЬСЯ В РОЗРОБЦІ</p>-->
+<!--</div>-->
 <app-table-page [startData]="data" title="работы на выполнении"
                 [mainColumn]="mainColumn" [stateFilterDisable]="true"
                 (onUpdateData)="onUpdate()"
