--- a/src/app/table-page/table-page.component.css
+++ b/src/app/table-page/table-page.component.css
@@ -11,13 +11,14 @@ thead tr th {
     overflow: hidden;
 }
 .table-style {
-    width: 100%!important;
-    height: 100%!important;
+
     background: #f4f4f4 !important;
     border-color: #f4f4f4 !important;
     font-size: 3px !important;
 }
-
+.ui-datatable-tablewrapper{
+    min-height: 150px !important;
+}
 span.ui-column-resizer {
     display: block;
     position: absolute;
