--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -53,7 +53,7 @@
               [paginator]="true" -->
     <div [style]="{height: tableDataService.mainData.length>20?'79vh':'88vh',background: '#f4f4f4',width: '100%'}">
         <p-table
-                styleClass="{{!contextMenuActionDisable?'p-datatable-sm':''}}"
+                styleClass="p-datatable-sm"
                 [(contextMenuSelection)]="contextSelectItem"
                 [columns]="_selectedColumns" [value]="tableDataService.mainData" [scrollable]="true"
                 scrollHeight="flex"
